# barenames

./: .gitignore  README.md  pyproject.toml
barenames/: __main__.py
barenames/lib/: __init__.py
