[tool.poetry]
name = "barenames"
version = "0.1.0"
description = ""
authors = ["Crystal Melting Dot <stresspassing@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
barenames = 'barenames.__main__:main'
