[tool.poetry]
name = "barenames"
version = "0.1.1"
description = "Batch file rename tool"
readme = "README.md"
authors = ["Crystal Melting Dot <stresspassing@gmail.com>"]
homepage = "https://github.com/cmd410/barenames"
repository = "https://github.com/cmd410/barenames"
license = "LGPL-2.1-only"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
barenames = 'barenames.__main__:main'
